Switched to official Angular Material (see material.angular.io)

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,19 @@
     <title>IeClient</title>
     <base href="/">
 
+    <!-- Material Design -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+
+  <!-- Font Awesome -->
+  <link href="res/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+
+  <!--
+  <link href="res/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="res/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
+  <script type="text/javascript" src="res/js/bootstrap.min.js"></script>
+  -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
