--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="content-security-policy"
+          content="default-src 'self' https://bin.nubenum.de 'unsafe-eval' 'unsafe-inline';
+                   style-src 'self' https://fonts.googleapis.com 'unsafe-inline';
+                   font-src 'self' https://fonts.gstatic.com data: 'unsafe-inline';
+                   object-src 'none'">
+    <meta name="referrer" content="no-referrer">
     <title>IeClient</title>
     <base href=".">
 
     <!-- Material Design -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
     <!-- Font Awesome -->
@@ -19,7 +25,7 @@
     -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon.png"/>
 </head>
 <body>
 <app-root></app-root>
