--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="referrer" content="no-referrer">
-    <title>IeClient</title>
+    <title>Indoor Explorer</title>
     <base href=".">
 
     <!-- Material Design -->
